--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/Views/ActionSheetPopup.xaml
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/Views/ActionSheetPopup.xaml
@@ -8,15 +8,12 @@
     x:DataType="local:ActionSheetPopup"
     CanBeDismissedByTappingOutsideOfPopup="False"
     Opened="OnPopupOpened"
-    Size="{Binding DialogSize}"
     Color="Transparent">
     <mct:Popup.Content>
-        <Frame
-            Padding="0"
-            CornerRadius="5"
-            HasShadow="True">
+        <Border
+            x:Name="container"
+            Padding="0">
             <Grid
-                x:Name="container"
                 Padding="20"
                 RowDefinitions="50, 1, Auto, *, 60">
                 <Label
@@ -36,7 +33,6 @@
                 <VerticalStackLayout
                     x:Name="actions"
                     Grid.Row="3"
-                    BindableLayout.ItemsSource="{Binding Buttons}"
                     VerticalOptions="Center">
                     <BindableLayout.ItemTemplate>
                         <DataTemplate x:DataType="{x:Type x:String}">
@@ -51,13 +47,13 @@
                     HorizontalOptions="End"
                     VerticalOptions="Center">
                     <Button
-                        x:Name="btnDestructive"
+                        x:Name="btnLeft"
                         Clicked="OnClicked" />
                     <Button
-                        x:Name="btnCancel"
+                        x:Name="btnRight"
                         Clicked="OnClicked" />
                 </HorizontalStackLayout>
             </Grid>
-        </Frame>
+        </Border>
     </mct:Popup.Content>
 </mct:Popup>
