--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/Views/AlertPopup.xaml
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/Views/AlertPopup.xaml
@@ -6,15 +6,13 @@
     xmlns:local="clr-namespace:VijayAnand.MauiToolkit.Pro.Views"
     xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     CanBeDismissedByTappingOutsideOfPopup="False"
-    Size="320, 240"
+    Size="320, 260"
     Color="Transparent">
     <mct:Popup.Content>
-        <Frame
-            Padding="0"
-            CornerRadius="5"
-            HasShadow="True">
+        <Border
+            x:Name="container"
+            Padding="0">
             <Grid
-                x:Name="container"
                 Padding="20"
                 RowDefinitions="50, 1, *, 60">
                 <Label
@@ -43,6 +41,6 @@
                         Clicked="OnCancelClicked" />
                 </HorizontalStackLayout>
             </Grid>
-        </Frame>
+        </Border>
     </mct:Popup.Content>
 </mct:Popup>
