--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/Views/PromptPopup.xaml
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/Views/PromptPopup.xaml
@@ -7,15 +7,13 @@
     xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     CanBeDismissedByTappingOutsideOfPopup="False"
     Opened="OnPopupOpened"
-    Size="320, 240"
+    Size="320, 260"
     Color="Transparent">
     <mct:Popup.Content>
-        <Frame
-            Padding="0"
-            CornerRadius="5"
-            HasShadow="True">
+        <Border
+            x:Name="container"
+            Padding="0">
             <Grid
-                x:Name="container"
                 Padding="20"
                 RowDefinitions="50, 1, *, 60">
                 <Label
@@ -46,6 +44,6 @@
                         Clicked="OnCancelClicked" />
                 </HorizontalStackLayout>
             </Grid>
-        </Frame>
+        </Border>
     </mct:Popup.Content>
 </mct:Popup>
