--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/Views/AlertPopup.xaml
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/Views/AlertPopup.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:VijayAnand.MauiToolkit.Pro.Views"
     xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    x:ClassModifier="NotPublic"
     CanBeDismissedByTappingOutsideOfPopup="False"
     Size="320, 260"
     Color="Transparent">
